Ajuste de rotas

--- a/clientes-app-angular/src/app/app.component.html
+++ b/clientes-app-angular/src/app/app.component.html
@@ -4,14 +4,14 @@
   <div id="layoutSidenav_content">
     <main>
       <div class="container-fluid">
-        <app-home></app-home>
+        <router-outlet></router-outlet>
       </div>
       <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid">
             <div class="d-flex align-items-center justify-content-between small">
-                <div class="text-muted">Copyright &copy; Meus Clientes 2020</div>
+                <div class="text-muted">Copyright &copy; Gerenciamento de clientes e serviços 2022</div>
                 <div>
-                    <a href="#">Privacy Policy</a>
+                    <a href="#">Politica de privacidade</a>
                     &middot;
                     <a href="#">Terms &amp; Conditions</a>
                 </div>
