--- a/clientes-app-angular/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/clientes-app-angular/src/app/clientes/clientes-form/clientes-form.component.html
@@ -1,1 +1,48 @@
-<h1>Formulário de Clientes</h1>
+<h1 class="mt-4">Clientes</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item active">Cadastro</li>
+</ol>
+<div class="container">
+    <form>
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="form-group">
+                <label>ID:</label>
+                <input type="text" class="form-control" name="id"
+                [ngModel]="cliente.id" disabled="true">
+            </div>
+
+            <div class="col-md-6"></div>
+            <div class="form-group">
+                <label>Data Cadastro:</label>
+                <input type="text" class="form-control" name="dataCadastro"
+                [ngModel]="cliente.dataCadastro" disabled="true">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="form-group">
+                <label>Nome: * </label>
+                <input type="text" class="form-control" 
+                   [(ngModel)]= "cliente.nome" name="nome" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6"></div>
+            <div class="form-group">
+                <label>CPF: * </label>
+                <input type="text" class="form-control" 
+                [(ngModel)]="cliente.cpf" name="cpf" />
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-success" (click)="clicar()">
+                    <i class="fa fa-save"></i> Salvar
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
